fake tailwind for the geneology page

--- a/public/sorin-istrail/geneology.html
+++ b/public/sorin-istrail/geneology.html
@@ -5,11 +5,11 @@
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Istrail Lab | Advisor Geneology</title>
-        <link rel="stylesheet" href="../../src/styles/globals.css" />
+        <link rel="stylesheet" href="geneology.css" />
     </head>
     <body class="flex flex-col h-full">
         <!-- Navbar -->
-        <div class="w-full flex items-center bg-base-300 px-2 py-3">
+        <nav class="w-full flex items-center bg-base-300 px-2 py-3">
             <div class="flex-1 px-2 mx-2">
                 <a
                     class="no-underline text-black font-bold text-xl px-2 py-2 rounded-lg hover:bg-[#1F293733]"
@@ -17,14 +17,14 @@
                     >Istrail Lab</a
                 >
             </div>
-        </div>
+        </nav>
         <div
             class="h-full w-full flex justify-center items-center"
             id="container"
         ></div>
         <!-- Footer -->
         <footer
-            class="flex justify-center items-center p-4 bg-neutral text-neutral-content mt-20 text-sm"
+            class="flex w-full justify-center items-center p-4 bg-neutral text-neutral-content mt-20 text-sm"
         >
             <div class="items-center grid-flow-col">
                 <p>Copyright Istrail Lab © 2023 - All right reserved</p>
